Add and edit worlds in UI, further UI improvement

--- a/templates/account.html
+++ b/templates/account.html
@@ -8,7 +8,7 @@
     </div>
 
     <div class="container-fluid">
-        <h4>Please enter data:</h4>
+        <h4>Please enter data</h4>
         <form action="{{ url_for('show_new_creator') }}" method="POST">
             {{ form.csrf_token }}
             <div class="form-group">
