--- a/templates/stats.html
+++ b/templates/stats.html
@@ -9,14 +9,14 @@
 
     <div class="container-fluid">
         <ul class="list-group">
-            <li class="list-group-item">Creators: {{ counts['creator'] }}</li>
-            <li class="list-group-item">Worlds: {{ counts['world'] }}</li>
-            <li class="list-group-item">Rooms: {{ counts['room'] }}</li>
-            <li class="list-group-item">Items: {{ counts['item'] }}</li>
-            <li class="list-group-item">Persons: {{ counts['person'] }}</li>
-            <li class="list-group-item">Objectives: {{ counts['objective'] }}</li>
-            <li class="list-group-item">Junctions: {{ counts['junction'] }}</li>
-            <li class="list-group-item">Solutions: {{ counts['solution'] }}</li>
+            <li class="list-group-item">Creators <span class="badge">{{ counts['creator'] }}</span></li>
+            <li class="list-group-item">Worlds <span class="badge">{{ counts['world'] }}</span></li>
+            <li class="list-group-item">Rooms <span class="badge">{{ counts['room'] }}</span></li>
+            <li class="list-group-item">Items <span class="badge">{{ counts['item'] }}</span></li>
+            <li class="list-group-item">Persons <span class="badge">{{ counts['person'] }}</span></li>
+            <li class="list-group-item">Objectives <span class="badge">{{ counts['objective'] }}</span></li>
+            <li class="list-group-item">Junctions <span class="badge">{{ counts['junction'] }}</span></li>
+            <li class="list-group-item">Solutions <span class="badge">{{ counts['solution'] }}</span></li>
         </ul>
     </div>
 {% endblock %}
