--- a/templates/account_detail.html
+++ b/templates/account_detail.html
@@ -8,7 +8,7 @@
     </div>
 
     <div class="container-fluid">
-        <h4>Please enter data:</h4>
+        <h4>Please enter data</h4>
         <form action="{{ url_for('show_my_creator') }}" method="POST">
             {{ form1.csrf_token }}
             {{ form1.operation }}
@@ -38,9 +38,10 @@
             {% endif %}
             <button type="submit" class="btn btn-default">Update</button>
         </form>
-        <br><br>
 
-        <h4>Set new password:</h4>
+        <br><hr class="little"><br>
+
+        <h4>Set new password</h4>
         <form action="{{ url_for('show_my_creator') }}" method="POST">
             {{ form2.csrf_token }}
             {{ form2.operation }}
@@ -61,9 +62,10 @@
             {% endif %}
             <button type="submit" class="btn btn-default">Set</button>
         </form>
-        <br><br>
 
-        <h4>Delete this user account:</h4>
+        <br><hr class="little"><br>
+
+        <h4>Delete this user account</h4>
         <form action="{{ url_for('show_my_creator') }}" method="POST">
             {{ form3.csrf_token }}
             {{ form3.operation }}
