--- a/templates/creator.html
+++ b/templates/creator.html
@@ -13,7 +13,7 @@
         {% else %}
             <div class="list-group">
                 {% for creator in creators %}
-                    <a href="{{ url_for('show_creator', creator_id=creator.creator_id)}}" class="list-group-item">{{ creator.creator_name }}</a>
+                    <a href="{{ url_for('show_creator', creator_id=creator.creator_id)}}" class="list-group-item">{{ creator.creator_name }}{% if creator.creator_role == "creator" %} <span class="glyphicon glyphicon-king"></span>{% endif %}</a>
                 {% endfor %}
             </div>
         {% endif %}
