--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
     </div>
 
     <div class="container-fluid">
-        <h4>Enter your login data:</h4>
+        <h4>Enter your login data</h4>
         <form action="{{ url_for('show_login') }}" method="POST">
             {{ form.csrf_token }}
             <div class="form-group">
