--- a/templates/world.html
+++ b/templates/world.html
@@ -13,9 +13,57 @@
         {% else %}
             <div class="list-group">
                 {% for world in worlds %}
-                    <a href="{{ url_for('show_world', world_id=world.world_id)}}" class="list-group-item">{{ world.world_name }}</a>
+                    <a href="{{ url_for('show_world', world_id=world.world_id)}}" class="list-group-item">{{ world.world_name }}{% if world.visible == 1 %} <span class="glyphicon glyphicon-globe"></span>{% endif %}</a>
                 {% endfor %}
             </div>
         {% endif %}
     </div>
+
+    {% if current_user.creator_role == "creator" %}
+        <br><hr class="little"><br>
+        <button data-toggle="collapse" data-target="#create">Create new world</button>
+        <br><br>
+        <div class="container-fluid collapse" id="create">
+            <form action="{{ url_for('show_worlds') }}" method="POST">
+                {{ form.csrf_token }}
+                <div class="form-group">
+                    <label for="name">{{ form.name.label }}</label>
+                    {{ form.name(size=20, class="form-control") }}
+                </div>
+                <div class="form-group">
+                    <label for="url">{{ form.url.label }}</label>
+                    {{ form.url(size=20, class="form-control") }}
+                </div>
+                <div class="form-group">
+                    <label for="description">{{ form.description.label }}</label>
+                    {{ form.description(size=40, class="form-control") }}
+                </div>
+                <div class="form-group">
+                    <label for="image">{{ form.image.label }}</label>
+                    {{ form.image(size=20, class="form-control") }}
+                </div>
+                <ul class="errors">
+                    {% for error in form.name.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+                <ul class="errors">
+                    {% for error in form.url.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+                <ul class="errors">
+                    {% for error in form.description.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+                <ul class="errors">
+                    {% for error in form.image.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+                <button type="submit" class="btn btn-default">Create</button>
+            </form>
+        </div>
+    {% endif %}
 {% endblock %}
