--- a/templates/item.html
+++ b/templates/item.html
@@ -18,4 +18,51 @@
             </div>
         {% endif %}
     </div>
+
+    {% if current_user.creator_role == "creator" and  current_user.creator_id == creator.creator_id %}
+        <br><hr class="little"><br>
+        <button data-toggle="collapse" data-target="#create">Create new item</button>
+        <br><br>
+        <div class="container-fluid collapse" id="create">
+            <form action="{{ url_for('show_items_p', world_id=world.world_id) }}" method="POST">
+                {{ form.csrf_token }}
+                <div class="form-group">
+                    <label for="name">{{ form.name.label }}</label>
+                    {{ form.name(size=20, class="form-control") }}
+                </div>
+                <div class="form-group">
+                    <label for="description">{{ form.description.label }}</label>
+                    {{ form.description(size=40, class="form-control") }}
+                </div>
+                <div class="form-group">
+                    <label for="image">{{ form.image.label }}</label>
+                    {{ form.image(size=20, class="form-control") }}
+                </div>
+                <ul class="errors">
+                    {% for error in form.name.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+                <ul class="errors">
+                    {% for error in form.description.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+                <ul class="errors">
+                    {% for error in form.image.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+                <div class="form-group">
+                    <label for="room">Select room</label>
+                    <select class="form-control" id="room" name="room">
+                        {% for room in rooms %}
+                            <option value="{{ room.room_id }}">{{ room.room_name }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <button type="submit" class="btn btn-default">Create</button>
+            </form>
+        </div>
+    {% endif %}
 {% endblock %}
