--- a/templates/room.html
+++ b/templates/room.html
@@ -18,4 +18,43 @@
             </div>
         {% endif %}
     </div>
+
+    {% if current_user.creator_role == "creator" and  current_user.creator_id == creator.creator_id %}
+        <br><hr class="little"><br>
+        <button data-toggle="collapse" data-target="#create">Create new room</button>
+        <br><br>
+        <div class="container-fluid collapse" id="create">
+            <form action="{{ url_for('show_rooms_p', world_id=world.world_id) }}" method="POST">
+                {{ form.csrf_token }}
+                <div class="form-group">
+                    <label for="name">{{ form.name.label }}</label>
+                    {{ form.name(size=20, class="form-control") }}
+                </div>
+                <div class="form-group">
+                    <label for="description">{{ form.description.label }}</label>
+                    {{ form.description(size=40, class="form-control") }}
+                </div>
+                <div class="form-group">
+                    <label for="image">{{ form.image.label }}</label>
+                    {{ form.image(size=20, class="form-control") }}
+                </div>
+                <ul class="errors">
+                    {% for error in form.name.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+                <ul class="errors">
+                    {% for error in form.description.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+                <ul class="errors">
+                    {% for error in form.image.errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+                <button type="submit" class="btn btn-default">Create</button>
+            </form>
+        </div>
+    {% endif %}
 {% endblock %}
