--- a/templates/room_detail.html
+++ b/templates/room_detail.html
@@ -11,14 +11,52 @@
         <i>Found in <a href="{{ url_for('show_world', world_id=world.world_id)}}">{{ world.world_name }}</a></i>
         <br><br>
 
-        <table class="table">
-            <tr><td class="w-5">ID</td> <td>{{ room.room_id }}</td></tr>
-            <tr><td colspan="2">{{ room.room_desc }}</td></tr>
-        </table>
-        <br><br>
-
         <img src="{{ room.room_img if (room.room_img!='') else '/static/not_found.jpg' }}" alt="Room Image" width="33%" height="33%">
         <br><br>
+
+        <div class="panel panel-default">
+            <div class="panel-body">{{ room.room_desc }}</div>
+        </div>
+
+        {% if current_user.creator_role == "creator" and  current_user.creator_id == creator.creator_id %}
+            <br><hr class="little"><br>
+            <button data-toggle="collapse" data-target="#create">Edit room</button>
+            <br><br>
+            <div class="container-fluid collapse" id="create">
+                <form action="{{ url_for('show_room_p', room_id=room.room_id) }}" method="POST">
+                    {{ form.csrf_token }}
+                    <div class="form-group">
+                        <label for="name">{{ form.name.label }}</label>
+                        {{ form.name(size=20, class="form-control") }}
+                    </div>
+                    <div class="form-group">
+                        <label for="description">{{ form.description.label }}</label>
+                        {{ form.description(size=40, class="form-control") }}
+                    </div>
+                    <div class="form-group">
+                        <label for="image">{{ form.image.label }}</label>
+                        {{ form.image(size=20, class="form-control") }}
+                    </div>
+                    <ul class="errors">
+                        {% for error in form.name.errors %}
+                            <li>{{ error }}</li>
+                        {% endfor %}
+                    </ul>
+                    <ul class="errors">
+                        {% for error in form.description.errors %}
+                            <li>{{ error }}</li>
+                        {% endfor %}
+                    </ul>
+                    <ul class="errors">
+                        {% for error in form.image.errors %}
+                            <li>{{ error }}</li>
+                        {% endfor %}
+                    </ul>
+                    <button type="submit" class="btn btn-default">Update</button>
+                </form>
+            </div>
+            <br><br>
+        {% endif %}
 
         <a href="{{ url_for('show_rooms', world_id=room.world_id) }}">All Rooms</a>
     </div>
