--- a/templates/world.html
+++ b/templates/world.html
@@ -24,7 +24,7 @@
         <button data-toggle="collapse" data-target="#create">Create new world</button>
         <br><br>
         <div class="container-fluid collapse" id="create">
-            <form action="{{ url_for('show_worlds') }}" method="POST">
+            <form action="{{ url_for('show_worlds_p') }}" method="POST">
                 {{ form.csrf_token }}
                 <div class="form-group">
                     <label for="name">{{ form.name.label }}</label>
