--- a/templates/account.html
+++ b/templates/account.html
@@ -15,10 +15,16 @@
                 <label for="creator">{{ form.creator.label }} ¹</label>
                 {{ form.creator(size=20, class="form-control") }}
             </div>
+            {% for error in form.creator.errors %}
+                <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+            {% endfor %}
             <div class="form-group">
                 <label for="email">{{ form.email.label }} ²</label>
                 {{ form.email(size=20, class="form-control") }}
             </div>
+            {% for error in form.email.errors %}
+                <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+            {% endfor %}
             <div class="form-group">
                 <label for="password">{{ form.password.label }}</label>
                 {{ form.password(size=20, class="form-control") }}
@@ -27,33 +33,20 @@
                 <label for="password2">{{ form.password2.label }}</label>
                 {{ form.password2(size=20, class="form-control") }}
             </div>
+            {% for error in form.password.errors %}
+                <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+            {% endfor %}
             <div class="form-group">
                 <label for="invitation">{{ form.invitation.label }} ³</label>
                 {{ form.invitation(size=20, class="form-control") }}
             </div>
+            {% for error in form.invitation.errors %}
+                <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+            {% endfor %}
             ¹ Also used as your login, may not contain spaces<br>
             ² Only used to send notifications about account changes like e-mail address changes<br>
             ³ Currently you need an invitation code. Just <a href="{{ url_for('show_index')}}">get in contact with me</a> to get one
-            <ul class="errors">
-                {% for error in form.creator.errors %}
-                    <li>{{ error }}</li>
-                {% endfor %}
-            </ul>
-            <ul class="errors">
-                {% for error in form.email.errors %}
-                    <li>{{ error }}</li>
-                {% endfor %}
-            </ul>
-            <ul class="errors">
-                {% for error in form.password.errors %}
-                    <li>{{ error }}</li>
-                {% endfor %}
-            </ul>
-            <ul class="errors">
-                {% for error in form.invitation.errors %}
-                    <li>{{ error }}</li>
-                {% endfor %}
-            </ul>
+            <br><br>
             <button type="submit" class="btn btn-default">Create</button>
         </form>
     </div>
