--- a/templates/account_detail.html
+++ b/templates/account_detail.html
@@ -25,16 +25,12 @@
                 {{ form1.url(size=20, class="form-control") }}
             </div>
             {% if operation == "mail" %}
-                <ul class="errors">
-                    {% for error in form1.email.errors %}
-                        <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-                <ul class="errors">
-                    {% for error in form1.url.errors %}
-                        <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
+                {% for error in form1.email.errors %}
+                    <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+                {% endfor %}
+                {% for error in form1.url.errors %}
+                    <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+                {% endfor %}
             {% endif %}
             <button type="submit" class="btn btn-default">Update</button>
         </form>
@@ -54,11 +50,9 @@
                 {{ form2.password2(size=20, class="form-control") }}
             </div>
             {% if operation == "pass" %}
-                <ul class="errors">
-                    {% for error in form2.password.errors %}
-                        <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
+                {% for error in form2.password.errors %}
+                    <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+                {% endfor %}
             {% endif %}
             <button type="submit" class="btn btn-default">Set</button>
         </form>
@@ -74,13 +68,11 @@
                 {{ form3.confirmation(size=20, class="form-control") }}
             </div>
             {% if operation == "delete" %}
-                <ul class="errors">
-                    {% for error in form3.confirmation.errors %}
-                        <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
+                {% for error in form3.confirmation.errors %}
+                    <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+                {% endfor %}
             {% endif %}
-            <button type="submit" class="btn btn-default">Delete</button>
+            <button type="submit" class="btn btn-danger">Delete</button>
         </form>
     </div>
 {% endblock %}
