--- a/templates/login.html
+++ b/templates/login.html
@@ -15,29 +15,23 @@
                 <label for="creator">{{ form.creator.label }}</label>
                 {{ form.creator(size=20, class="form-control") }}
             </div>
+            {% for error in form.creator.errors %}
+                <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+            {% endfor %}
             <div class="form-group">
                 <label for="password">{{ form.password.label }}</label>
                 {{ form.password(size=20, class="form-control") }}
             </div>
-            <ul class="errors">
-                {% for error in form.creator.errors %}
-                    <li>{{ error }}</li>
-                {% endfor %}
-            </ul>
-            <ul class="errors">
-                {% for error in form.password.errors %}
-                    <li>{{ error }}</li>
-                {% endfor %}
-            </ul>
+            {% for error in form.password.errors %}
+                <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+            {% endfor %}
             <div class="checkbox">
                 <label>{{ form.remember() }} {{ form.remember.label }}</label>
             </div>
             {% if form.remember.errors %}
-                <ul class="errors">
-                    {% for error in form.remember.errors %}
-                        <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
+                {% for error in form.remember.errors %}
+                    <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+                {% endfor %}
             {% endif %}
             <button type="submit" class="btn btn-default">Log in</button>
         </form>
