--- a/templates/objective.html
+++ b/templates/objective.html
@@ -30,74 +30,58 @@
                     <label for="name">{{ form.name.label }}</label>
                     {{ form.name(size=20, class="form-control") }}
                 </div>
+                {% for error in form.name.errors %}
+                    <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+                {% endfor %}
                 <div class="form-group">
                     <label for="title">{{ form.title.label }}</label>
                     {{ form.title(size=20, class="form-control") }}
                 </div>
+                {% for error in form.title.errors %}
+                    <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+                {% endfor %}
                 <div class="form-group">
                     <label for="difficulty">{{ form.difficulty.label }}</label>
                     {{ form.difficulty(size=1, class="form-control") }}
                 </div>
+                {% for error in form.difficulty.errors %}
+                    <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+                {% endfor %}
                 <div class="form-group">
                     <label for="url">{{ form.url.label }}</label>
                     {{ form.url(size=20, class="form-control") }}
                 </div>
+                {% for error in form.url.errors %}
+                    <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+                {% endfor %}
                 <div class="form-group">
                     <label for="supported">{{ form.supported.label }}</label>
                     {{ form.supported(size=40, class="form-control") }}
                 </div>
+                {% for error in form.supported.errors %}
+                    <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+                {% endfor %}
                 <div class="form-group">
                     <label for="requires">{{ form.requires.label }}</label>
                     {{ form.requires(size=40, class="form-control") }}
                 </div>
+                {% for error in form.requires.errors %}
+                    <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+                {% endfor %}
                 <div class="form-group">
                     <label for="description">{{ form.description.label }}</label>
                     {{ form.description(size=40, class="form-control") }}
                 </div>
+                {% for error in form.description.errors %}
+                    <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+                {% endfor %}
                 <div class="form-group">
                     <label for="image">{{ form.image.label }}</label>
                     {{ form.image(size=20, class="form-control") }}
                 </div>
-                <ul class="errors">
-                    {% for error in form.name.errors %}
-                        <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-                <ul class="errors">
-                    {% for error in form.title.errors %}
-                        <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-                <ul class="errors">
-                    {% for error in form.difficulty.errors %}
-                        <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-                <ul class="errors">
-                    {% for error in form.url.errors %}
-                        <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-                <ul class="errors">
-                    {% for error in form.supported.errors %}
-                        <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-                <ul class="errors">
-                    {% for error in form.requires.errors %}
-                        <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-                <ul class="errors">
-                    {% for error in form.description.errors %}
-                        <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-                <ul class="errors">
-                    {% for error in form.image.errors %}
-                        <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
+                {% for error in form.image.errors %}
+                    <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+                {% endfor %}
                 <div class="form-group">
                     <label for="room">Select room</label>
                     <select class="form-control" id="room" name="room">
