--- a/templates/room.html
+++ b/templates/room.html
@@ -30,29 +30,23 @@
                     <label for="name">{{ form.name.label }}</label>
                     {{ form.name(size=20, class="form-control") }}
                 </div>
+                {% for error in form.name.errors %}
+                    <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+                {% endfor %}
                 <div class="form-group">
                     <label for="description">{{ form.description.label }}</label>
                     {{ form.description(size=40, class="form-control") }}
                 </div>
+                {% for error in form.description.errors %}
+                    <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+                {% endfor %}
                 <div class="form-group">
                     <label for="image">{{ form.image.label }}</label>
                     {{ form.image(size=20, class="form-control") }}
                 </div>
-                <ul class="errors">
-                    {% for error in form.name.errors %}
-                        <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-                <ul class="errors">
-                    {% for error in form.description.errors %}
-                        <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-                <ul class="errors">
-                    {% for error in form.image.errors %}
-                        <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
+                {% for error in form.image.errors %}
+                    <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+                {% endfor %}
                 <button type="submit" class="btn btn-default">Create</button>
             </form>
         </div>
