--- a/templates/storage.html
+++ b/templates/storage.html
@@ -15,11 +15,9 @@
                 {{ form.file }}
             </div>
             <button type="submit" class="btn btn-default">Upload</button>
-            <ul class="errors">
-                {% for error in form.file.errors %}
-                    <li>{{ error }}</li>
-                {% endfor %}
-            </ul>
+            {% for error in form.file.errors %}
+                <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+            {% endfor %}
         </form>
 
         <br><hr class="little"><br>
