--- a/templates/world_detail.html
+++ b/templates/world_detail.html
@@ -30,38 +30,30 @@
                         <label for="name">{{ form.name.label }}</label>
                         {{ form.name(size=20, class="form-control") }}
                     </div>
+                    {% for error in form.name.errors %}
+                        <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+                    {% endfor %}
                     <div class="form-group">
                         <label for="url">{{ form.url.label }}</label>
                         {{ form.url(size=20, class="form-control") }}
                     </div>
+                    {% for error in form.url.errors %}
+                        <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+                    {% endfor %}
                     <div class="form-group">
                         <label for="description">{{ form.description.label }}</label>
                         {{ form.description(size=40, class="form-control") }}
                     </div>
+                    {% for error in form.description.errors %}
+                        <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+                    {% endfor %}
                     <div class="form-group">
                         <label for="image">{{ form.image.label }}</label>
                         {{ form.image(size=20, class="form-control") }}
                     </div>
-                    <ul class="errors">
-                        {% for error in form.name.errors %}
-                            <li>{{ error }}</li>
-                        {% endfor %}
-                    </ul>
-                    <ul class="errors">
-                        {% for error in form.url.errors %}
-                            <li>{{ error }}</li>
-                        {% endfor %}
-                    </ul>
-                    <ul class="errors">
-                        {% for error in form.description.errors %}
-                            <li>{{ error }}</li>
-                        {% endfor %}
-                    </ul>
-                    <ul class="errors">
-                        {% for error in form.image.errors %}
-                            <li>{{ error }}</li>
-                        {% endfor %}
-                    </ul>
+                    {% for error in form.image.errors %}
+                        <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+                    {% endfor %}
                     <button type="submit" class="btn btn-default">Update</button>
                 </form>
             </div>
@@ -70,7 +62,7 @@
         <br><hr class="little"><br>
         <h4>World Actions</h4>
         <form action="{{ url_for('show_objectives', world_id=world.world_id) }}">
-            <button type="submit" class="btn btn-default">Select World</button>
+            <button type="submit" class="btn btn-primary">Select World</button>
         </form>
         <br>
         {% if current_user.creator_role == "creator" or current_user.creator_role == "user" %}
@@ -93,7 +85,7 @@
         {% endif %}
         {% if current_user.creator_id == world.creator_id %}
             <form action="{{ url_for('show_deleted_world', world_id=world.world_id) }}">
-                <button type="submit" class="btn btn-default">Delete World</button>
+                <button type="submit" class="btn btn-danger">Delete World</button>
             </form>
             <br>
         {% endif %}
