--- a/templates/index.html
+++ b/templates/index.html
@@ -17,4 +17,46 @@
         <br>
         If you want to get in touch with me just visit my <a href="https://github.com/Benjamin-BK-Krueger">GitHub page</a> or my <a href="https://blk8.de">WordPress site</a>. 
     </div>
+
+    <br><hr class="little"><br>
+
+    <div class="container">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                {% for world in worlds %}
+                    <li data-target="#myCarousel" data-slide-to="{{ loop.index  }}"></li>
+                {% endfor %}
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+                <div class="item active">
+                    <img src="/static/kringle_worlds.png" alt="Kringle Worlds" style="max-height:300px;height:100%">
+                    <div class="carousel-caption">
+                            <h3>Welcome to Kringle.info</h3>
+                    </div>
+                </div>
+                {% for world in worlds %}
+                    <div class="item">
+                        <a href="{{ url_for('show_world', world_id=world.world_id)}}"><img src="{{ world.world_img if (world.world_img!='') else '/static/not_found.jpg' }}" style="max-height:300px;height:100%"></a>
+                        <div class="carousel-caption">
+                            <h3>{{ world.world_name }}</h3>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
 {% endblock %}
