--- a/templates/objective_detail.html
+++ b/templates/objective_detail.html
@@ -25,84 +25,126 @@
             <tr><td class="w-5">Supported_by</td> <td>{{ objective.supported_by }}</td></tr>
             <tr><td class="w-5">Requires</td> <td>{{ objective.requires }}</td></tr>
         </table>
-        <br><br>
 
-        {% if current_user.creator_role == "creator" and  current_user.creator_id == creator.creator_id %}
-            <br><hr class="little"><br>
-            <button data-toggle="collapse" data-target="#create">Edit objective</button>
+        <br><hr class="little"><br>
+        <h4>Objective Actions</h4>
+        <br>
+
+        {% if current_user.creator_role == "creator" or current_user.creator_role == "user" %}
+            <form action="{{ url_for('show_my_solution', objective_id=objective.objective_id)}}">
+                <button type="submit" class="btn btn-default">Edit My Solution</button>
+            </form>
             <br><br>
-            <div class="container-fluid collapse" id="create">
-                <form action="{{ url_for('show_objective_p', objective_id=objective.objective_id) }}" method="POST">
-                    {{ form.csrf_token }}
-                    <div class="form-group">
-                        <label for="name">{{ form.name.label }}</label>
-                        {{ form.name(size=20, class="form-control") }}
-                    </div>
-                    {% for error in form.name.errors %}
-                        <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
-                    {% endfor %}
-                    <div class="form-group">
-                        <label for="title">{{ form.title.label }}</label>
-                        {{ form.title(size=20, class="form-control") }}
-                    </div>
-                    {% for error in form.title.errors %}
-                        <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
-                    {% endfor %}
-                    <div class="form-group">
-                        <label for="difficulty">{{ form.difficulty.label }}</label>
-                        {{ form.difficulty(size=1, class="form-control") }}
-                    </div>
-                    {% for error in form.difficulty.errors %}
-                        <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
-                    {% endfor %}
-                    <div class="form-group">
-                        <label for="url">{{ form.url.label }}</label>
-                        {{ form.url(size=20, class="form-control") }}
-                    </div>
-                    {% for error in form.url.errors %}
-                        <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
-                    {% endfor %}
-                    <div class="form-group">
-                        <label for="supported">{{ form.supported.label }}</label>
-                        {{ form.supported(size=40, class="form-control") }}
-                    </div>
-                    {% for error in form.supported.errors %}
-                        <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
-                    {% endfor %}
-                    <div class="form-group">
-                        <label for="requires">{{ form.requires.label }}</label>
-                        {{ form.requires(size=40, class="form-control") }}
-                    </div>
-                    {% for error in form.requires.errors %}
-                        <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
-                    {% endfor %}
-                    <div class="form-group">
-                        <label for="description">{{ form.description.label }}</label>
-                        {{ form.description(size=40, class="form-control") }}
-                    </div>
-                    {% for error in form.description.errors %}
-                        <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
-                    {% endfor %}
-                    <div class="form-group">
-                        <label for="image">{{ form.image.label }}</label>
-                        {{ form.image(size=20, class="form-control") }}
-                    </div>
-                    {% for error in form.image.errors %}
-                        <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
-                    {% endfor %}
-                    <button type="submit" class="btn btn-default">Update</button>
-                </form>
-            </div>
-            <br><hr class="little"><br>
         {% endif %}
 
-        <h4>Master Quest</h4>
-        {{ mdquest|safe }}
+        {% if current_user.creator_role == "creator" and  current_user.creator_id == creator.creator_id %}
+            <!-- Trigger the modal with a button -->
+            <button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal">Edit Objective</button>
 
+            <!-- Modal -->
+            <div id="myModal" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">Edit Objective</h4>
+                        </div>
+                        <div class="modal-body">
+                            <form action="{{ url_for('show_objective_p', objective_id=objective.objective_id) }}" method="POST">
+                                {{ form.csrf_token }}
+                                <div class="form-group">
+                                    <label for="name">{{ form.name.label }}</label>
+                                    {{ form.name(size=20, class="form-control") }}
+                                </div>
+                                {% for error in form.name.errors %}
+                                    <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+                                {% endfor %}
+                                <div class="form-group">
+                                    <label for="title">{{ form.title.label }}</label>
+                                    {{ form.title(size=20, class="form-control") }}
+                                </div>
+                                {% for error in form.title.errors %}
+                                    <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+                                {% endfor %}
+                                <div class="form-group">
+                                    <label for="difficulty">{{ form.difficulty.label }}</label>
+                                    {{ form.difficulty(size=1, class="form-control") }}
+                                </div>
+                                {% for error in form.difficulty.errors %}
+                                    <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+                                {% endfor %}
+                                <div class="form-group">
+                                    <label for="url">{{ form.url.label }}</label>
+                                    {{ form.url(size=20, class="form-control") }}
+                                </div>
+                                {% for error in form.url.errors %}
+                                    <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+                                {% endfor %}
+                                <div class="form-group">
+                                    <label for="supported">{{ form.supported.label }}</label>
+                                    {{ form.supported(size=40, class="form-control") }}
+                                </div>
+                                {% for error in form.supported.errors %}
+                                    <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+                                {% endfor %}
+                                <div class="form-group">
+                                    <label for="requires">{{ form.requires.label }}</label>
+                                    {{ form.requires(size=40, class="form-control") }}
+                                </div>
+                                {% for error in form.requires.errors %}
+                                    <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+                                {% endfor %}
+                                <div class="form-group">
+                                    <label for="description">{{ form.description.label }}</label>
+                                    {{ form.description(size=40, class="form-control") }}
+                                </div>
+                                {% for error in form.description.errors %}
+                                    <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+                                {% endfor %}
+                                <div class="form-group">
+                                    <label for="image">{{ form.image.label }}</label>
+                                    {{ form.image(size=20, class="form-control") }}
+                                </div>
+                                {% for error in form.image.errors %}
+                                    <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+                                {% endfor %}
+                                <button type="submit" class="btn btn-default">Update</button>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br><br>
+
+            <form action="{{ url_for('show_quest', objective_id=objective.objective_id)}}">
+                <button type="submit" class="btn btn-default">Edit Master Quest</button>
+            </form>
+            <br><br>
+
+            <form action="{{ url_for('show_deleted_objective', objective_id=objective.objective_id) }}">
+                <button type="submit" class="btn btn-danger">Delete Objective</button>
+            </form>
+            <br><br>
+        {% endif %}
+
+        {% if current_user.creator_role != "creator" and current_user.creator_role != "user" %}
+            No actions available.
+        {% endif %}
+
+        <br><hr class="little"><br>
+
+        <h4>Master Quest</h4>
+        <br>
+        {{ mdquest|safe }}
 
         <br><hr class="little"><br>
 
         <h4>Public Solutions</h4>
+        <br>
         {% if world.visible == 1 %}
             <div class="list-group">
                 {% for solution in solutions %}
@@ -112,23 +154,17 @@
         {% else %}
             Solutions are not visible as this world is not public currently.
         {% endif %}
-
-        <br><hr class="little"><br>
-
-        <h4>Edit Data</h4>
-        {% if current_user.creator_id == world.creator_id %}
-            <form action="{{ url_for('show_quest', objective_id=objective.objective_id)}}">
-                <button type="submit" class="btn btn-default">Edit Master Quest</button>
-            </form>
-        {% endif %}
-        <br>
-        {% if current_user.creator_role == "creator" or current_user.creator_role == "user" %}
-            <form action="{{ url_for('show_my_solution', objective_id=objective.objective_id)}}">
-                <button type="submit" class="btn btn-default">Edit My Solution</button>
-            </form>
-        {% endif %}
         <br><br>
 
         <a href="{{ url_for('show_objectives', world_id=objective.world_id) }}">All Objectives</a>
     </div>
 {% endblock %}
+
+
+
+
+
+
+
+
+
